@@ -1,3 +1,8 @@
+2004-02-16  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/io.cxx (readwritev): For EWOULDBLOCK and EAGAIN return
+	the number of bytes written if any have been written.
+
 2004-01-07  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* src/select.cxx: No need to make pselect() dependent on
